--- a/Views/Admin/ListOfDepartment.cshtml
+++ b/Views/Admin/ListOfDepartment.cshtml
@@ -51,9 +51,12 @@
                             <a asp-action="Edit" asp-route-id="@item.DepartmentId" class="btn btn-sm btn-primary me-1">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
-                            <a asp-action="Delete" asp-route-id="@item.DepartmentId" class="btn btn-sm btn-danger">
+                            <a asp-action="Delete" asp-route-id="@item.DepartmentId"
+                               class="btn btn-sm btn-danger"
+                               onclick="return confirm('Are you sure you want to delete this department?');">
                                 <i class="bi bi-trash3"></i>
                             </a>
+
                         </td>
                     </tr>
                     i++;
