--- a/Views/Admin/ListOfStudent.cshtml
+++ b/Views/Admin/ListOfStudent.cshtml
@@ -60,7 +60,7 @@
                             </div>
                         </td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.RegistrationId" class="btn btn-sm btn-primary me-1" title="Edit">
+                            <a asp-action="EditStudent" asp-route-id="@item.RegistrationId" class="btn btn-sm btn-primary me-1" title="Edit">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
                             <a asp-action="Delete" asp-route-id="@item.RegistrationId" class="btn btn-sm btn-danger" title="Delete">
