--- a/Views/Admin/EditStudent.cshtml
+++ b/Views/Admin/EditStudent.cshtml
@@ -7,6 +7,23 @@
 <div class="container mt-4">
 	<h2><i class="bi bi-pencil-square"></i> Edit Student</h2>
 
+	<div class="row p-1">
+		@if (TempData["Success"] != null)
+		{
+			<div class="alert alert-success alert-dismissible rounded-0 border-dark text-dark fw-bold" role="alert">
+				@TempData["Success"]
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		}
+		@if (TempData["Error"] != null)
+		{
+			<div class="alert alert-danger alert-dismissible rounded-0 border-dark text-dark fw-bold" role="alert">
+				@TempData["Error"]
+				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		}
+	</div>
+
 	<form asp-action="EditStudent">
 		<input type="hidden" asp-for="RegistrationId" />
 		<input type="hidden" asp-for="Password" />
@@ -31,11 +48,11 @@
 			<span asp-validation-for="Email" class="text-danger small"></span>
 		</div>
 
-		@* <div class="mb-3">
+		<div class="mb-3">
 			<label asp-for="ConfirmAppEmailId" class="form-label"></label>
 			<input asp-for="ConfirmAppEmailId" class="form-control" />
 			<span asp-validation-for="ConfirmAppEmailId" class="text-danger small"></span>
-		</div> *@
+		</div>
 
 		<div class="mb-3">
 			<label asp-for="MobileNumber" class="form-label"></label>
