--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <i class="bi bi-journal-bookmark-fill"></i> Sample Booking System
+                    <i class="bi bi-journal-bookmark-fill"></i> SB System
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -34,23 +34,26 @@
                                 <i class="bi bi-person-plus-fill"></i> New Registration
                             </a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownPrintReports" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="bi bi-shield-lock-fill"></i> Admin
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrintReports">
-                                <li>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfDepartment">
-                                        <i class="bi bi-building"></i> Departments
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfStudent">
-                                        <i class="bi bi-people-fill"></i> Students
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
+                         @if (User.Claims.Any())
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownPrintReports" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="bi bi-shield-lock-fill"></i> Admin
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownPrintReports">
+                                    <li>
+                                        <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfStudent">
+                                            <i class="bi bi-people-fill"></i> Students
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfDepartment">
+                                            <i class="bi bi-building"></i> Departments
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                     <ul class="navbar-nav flex-grow-1 justify-content-end">
                         @if (User.Claims.Any())
@@ -88,7 +91,7 @@
     <footer class="border-top footer bg-light py-0 mt-auto">
         <div class="container text-center">
             <span class="text-muted">
-                &copy; 2025 - <strong>SICProject</strong> &nbsp;|&nbsp;
+                &copy; 2025 - <strong>SB System</strong> &nbsp;|&nbsp;
                 <a asp-area="" asp-controller="Home" asp-action="Privacy" class="text-decoration-none text-muted">
                     <i class="bi bi-shield-check me-1"></i> Privacy Policy
                 </a>
