--- a/Views/Home/changePassword.cshtml
+++ b/Views/Home/changePassword.cshtml
@@ -56,7 +56,7 @@
                             <label class="form-label">
                                 <i class="bi bi-lock-fill me-1"></i> New Password
                             </label>
-                            <input asp-for="AppPwdNew" type="password" class="form-control" placeholder="Enter old password" />
+                            <input asp-for="AppPwdNew" type="password" class="form-control" placeholder="Enter New password" />
                             <span asp-validation-for="AppPwdNew" class="text-danger"></span>
                         </div>
 
