--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,21 +20,25 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                    <i class="bi bi-journal-bookmark-fill"></i> SB System
-                </a>
+                @if (User.Claims.Any())
+                {
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="dashboard">
+                        <i class="bi bi-journal-bookmark-fill"></i> Dashboard
+                    </a>
+                }
+                else
+                {
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                        <i class="bi bi-journal-bookmark-fill"></i> SB System
+                    </a>
+                }
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Registration">
-                                <i class="bi bi-person-plus-fill"></i> New Registration
-                            </a>
-                        </li>
-                         @if (User.Claims.Any())
+                        @if (User.Claims.Any())
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-dark" id="navbarDropdownPrintReports" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -52,6 +56,14 @@
                                         </a>
                                     </li>
                                 </ul>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Registration">
+                                    <i class="bi bi-person-plus-fill"></i> New Registration
+                                </a>
                             </li>
                         }
                     </ul>
