added holiday and some other thing bs5 modal for delete

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,6 +55,12 @@
                                             <i class="bi bi-building"></i> Departments
                                         </a>
                                     </li>
+                                    <li>
+                                        <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfHoliday">
+                                            <i class="bi bi-calendar-event me-1"></i> Holidays
+                                        </a>
+                                    </li>
+
                                 </ul>
                             </li>
                         }
