--- a/Views/Admin/ListOfStudent.cshtml
+++ b/Views/Admin/ListOfStudent.cshtml
@@ -68,9 +68,9 @@
                             <a asp-action="EditStudent" asp-route-id="@item.RegistrationId" class="btn btn-sm btn-primary me-1" title="Edit">
                                 <i class="bi bi-pencil-square"></i>
                             </a>
-                            <a asp-action="Delete" asp-route-id="@item.RegistrationId" class="btn btn-sm btn-danger" title="Delete">
+                       @*      <a asp-action="Delete" asp-route-id="@item.RegistrationId" class="btn btn-sm btn-danger" title="Delete">
                                 <i class="bi bi-trash"></i>
-                            </a>
+                            </a> *@
                         </td>
                     </tr>
                     i++;
