--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -51,6 +51,11 @@
                                         </a>
                                     </li>
                                     <li>
+                                        <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfInstruments">
+                                            <i class="bi bi-diagram-3-fill"></i> Instruments
+                                        </a>
+                                    </li>
+                                    <li>
                                         <a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListOfDepartment">
                                             <i class="bi bi-building"></i> Departments
                                         </a>
