--- a/Views/Admin/ListOfStudent.cshtml
+++ b/Views/Admin/ListOfStudent.cshtml
@@ -29,7 +29,7 @@
     </div>
 
     <div class="table-responsive">
-        <table class="table table-bordered table-striped table-hover align-middle">
+        <table id="myTable" class="table table-bordered table-striped table-hover align-middle">
             <thead class="table-light">
                 <tr>
                     <th>#</th>
@@ -79,12 +79,21 @@
         </table>
     </div>
 </div>
-@section MyCssScripts {
 
+@section MyCssScripts {
+    <link href="~/css/datatables.min.css" rel="stylesheet" />
 }
 
+
 @section MyJsScripts {
+    <script src="~/js/datatables.min.js"></script>
     <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable({
+                "pageLength": 100
+            });
+        });
+
         $(document).ready(function () {
             $('.toggle-approval').change(function () {
                 var checkbox = $(this);
