--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,6 +68,11 @@
 
                                 </ul>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="SelectInstrumentOrStudent">
+                                    <i class="bi bi-search me-1"></i> Search Bookings
+                                </a>
+                            </li>
                         }
                         else
                         {
